--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <section class="skills skills-list">
             <div class="contanier">
                 <h2 class="hiden-title">Особенности компании</h2>
-                <ul class="skills-list flex list">
+                <ul class="skills-list list">
                     <li class="skills-list-item">
                         <div class="skills-list-item-bg">
                             <svg width='70' height='70'>
