д/з5 сделать нужно модальную кнопку!

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.css"
         integrity="sha512-Zx6MlUMKSVJoQ+83OwhdILe8cSEsCzfqThJd7J/VA2UrK6Ctj85p+xzqfyuNXE5B1k25uUdmJ2OzItbBy9GHAQ=="
         crossorigin="anonymous" />
     <link rel="stylesheet" href="./css/styles.css">
 </head>
+
 <body>
     <!--header portfolio-->
     <header class="header">
@@ -55,10 +58,10 @@
         <!--section hero-->
         <section class="portfolio">
             <div class="contanier">
-                <h2 class="hiden-title">Portfolio</h2>            
+                <h2 class="hiden-title">Portfolio</h2>
                 <ul class="filter-options flex list">
                     <li class="filter-item-options">
-                        <button type="button" class="filter-item">Все</button>                        
+                        <button type="button" class="filter-item">Все</button>
                     </li>
                     <li class="filter-item-options">
                         <button type="button" class="filter-item">Веб-сайты</button>
@@ -76,84 +79,155 @@
                 <ul class="project flex list">
                     <li class="project-item">
                         <a href="" class="project-foto link">
-                            <img class="project-thumbnail" src="./images/Portfolio/foto-1.jpg" alt="Технокряк" width="370" height="294">
+                            <div class="project-item-img-wrapper">
+                                <img class="project-thumbnail" src="./images/Portfolio/foto-1.jpg" alt="Технокряк" width="370" height="294">
+                                <p class="overlay">
+                                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+                                    цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.
+                                </p>
+                            </div>
                             <div class="project-heading-content">
-                            <h2 class="project-heading">Технокряк</h2>
-                            <p class="project-description">Веб-сайт</p>
+                                <h2 class="project-heading">Технокряк</h2>
+                                <p class="project-description">Веб-сайт</p>
                             </div>
                         </a>
                     </li>
                     <li class="project-item">
                         <a href="" class="project-foto link">
-                            <img class="project-thumbnail" src="./images/Portfolio/foto-2.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
+                            <div class="project-item-img-wrapper">
+                            <img class="project-thumbnail" src="./images/Portfolio/foto-2.jpg"
+                                alt="Постер New Orlean vs Golden Star" width="370" height="294">
+                                <p class="overlay">
+                                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+                                    цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.
+                                </p>
+                            </div>
                             <div class="project-heading-content">
-                            <h2 class="project-heading">Постер New Orlean vs Golden Star</h2>
-                            <p class="project-description">Дизайн</p>
+                                <h2 class="project-heading">Постер New Orlean vs Golden Star</h2>
+                                <p class="project-description">Дизайн</p>
                             </div>
                         </a>
                     </li>
                     <li class="project-item">
                         <a href="" class="project-foto link">
-                            <img class="project-thumbnail" src="./images/Portfolio/foto-3.jpg" alt="Ресторан Seafood" width="370" height="294">
+                            <div class="project-item-img-wrapper">
+                            <img class="project-thumbnail" src="./images/Portfolio/foto-3.jpg" alt="Ресторан Seafood"
+                                width="370" height="294">
+                                <p class="overlay">
+                                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+                                    цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.
+                                </p>
+                            </div>
                             <div class="project-heading-content">
-                            <h2 class="project-heading">Ресторан Seafood</h2>
-                            <p class="project-description">Приложение</p>
+                                <h2 class="project-heading">Ресторан Seafood</h2>
+                                <p class="project-description">Приложение</p>
                             </div>
                         </a>
                     </li>
                     <li class="project-item">
                         <a href="" class="project-foto link">
-                            <img class="project-thumbnail" src="./images/Portfolio/foto-4.jpg" alt="Проект Prime" width="370" height="294">
+                            <div class="project-item-img-wrapper">
+                            <img class="project-thumbnail" src="./images/Portfolio/foto-4.jpg" alt="Проект Prime"
+                                width="370" height="294">
+                                <p class="overlay">
+                                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+                                    цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.
+                                </p>
+                            </div>
                             <div class="project-heading-content">
-                            <h2 class="project-heading">Проект Prime</h2>
-                            <p class="project-description">Маркетинг</p> 
+                                <h2 class="project-heading">Проект Prime</h2>
+                                <p class="project-description">Маркетинг</p>
                             </div>
                         </a>
                     </li>
                     <li class="project-item">
                         <a href="" class="project-foto link">
-                            <img class="project-thumbnail" src="./images/Portfolio/foto-5.jpg" alt="Проект Boxes" width="370" height="294">
-                            <div class="project-heading-content">
-                            <h2 class="project-heading">Проект Boxes</h2>
-                            <p class="project-description">Приложение</p>
+                            <div class="project-item-img-wrapper">
+                            <img class="project-thumbnail" src="./images/Portfolio/foto-5.jpg" alt="Проект Boxes"
+                                width="370" height="294">
+                                <p class="overlay">
+                                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+                                    цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.
+                                </p>
                             </div>
-                        </a>                        
+                            <div class="project-heading-content">
+                                <h2 class="project-heading">Проект Boxes</h2>
+                                <p class="project-description">Приложение</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="project-item">
                         <a href="" class="project-foto link">
-                            <img class="project-thumbnail" src="./images/Portfolio/foto-6.jpg" alt="Inspiration has no Borders" width="370" height="294">
+                            <div class="project-item-img-wrapper">
+                            <img class="project-thumbnail" src="./images/Portfolio/foto-6.jpg"
+                                alt="Inspiration has no Borders" width="370" height="294">
+                                <p class="overlay">
+                                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+                                    цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.
+                                </p>
+                            </div>
                             <div class="project-heading-content">
-                            <h2 class="project-heading">Inspiration has no Borders</h2>
-                            <p class="project-description">Веб-сайт</p>
+                                <h2 class="project-heading">Inspiration has no Borders</h2>
+                                <p class="project-description">Веб-сайт</p>
                             </div>
                         </a>
                     </li>
                     <li class="project-item">
                         <a href="" class="project-foto link">
-                            <img class="project-thumbnail" src="./images/Portfolio/foto-7.jpg" alt="Издание Limited Edition" width="370" height="294">
+                            <div class="project-item-img-wrapper">
+                            <img class="project-thumbnail" src="./images/Portfolio/foto-7.jpg"
+                                alt="Издание Limited Edition" width="370" height="294">
+                                <p class="overlay">
+                                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+                                    цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.
+                                </p>
+                            </div>
                             <div class="project-heading-content">
-                            <h2 class="project-heading">Издание Limited Edition</h2>
-                            <p class="project-description">Дизайн</p>
+                                <h2 class="project-heading">Издание Limited Edition</h2>
+                                <p class="project-description">Дизайн</p>
                             </div>
                         </a>
-                    </li>                                                                                                       
-                    <li class="project-item">
-                        <a href="" class="project-foto link">
-                            <img class="project-thumbnail" src="./images/Portfolio/foto-8.jpg" alt="Проект LAB" width="370" height="294">
-                            <div class="project-heading-content">
-                            <h2 class="project-heading">Проект LAB</h2>
-                            <p class="project-description">Маркетинг</p>
-                            </div>
-                        </a>                            
                     </li>
                     <li class="project-item">
                         <a href="" class="project-foto link">
-                            <img class="project-thumbnail" src="./images/Portfolio/foto-9.jpg" alt="Growing Business" width="370" height="294">
+                            <div class="project-item-img-wrapper">
+                            <img class="project-thumbnail" src="./images/Portfolio/foto-8.jpg" alt="Проект LAB"
+                                width="370" height="294">
+                                    <p class="overlay">
+                                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+                                    цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.
+                                </p>
+                            </div>
                             <div class="project-heading-content">
-                            <h2 class="project-heading">Growing Business</h2>
-                            <p class="project-description">Приложение</p>
-                            </div>                            
-                        </a>                            
+                                <h2 class="project-heading">Проект LAB</h2>
+                                <p class="project-description">Маркетинг</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="project-item">
+                        <a href="" class="project-foto link">
+                            <div class="project-item-img-wrapper">
+                            <img class="project-thumbnail" src="./images/Portfolio/foto-9.jpg" alt="Growing Business"
+                                width="370" height="294">
+                                <p class="overlay">
+                                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+                                    цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.
+                                </p>
+                            </div>
+                            <div class="project-heading-content">
+                                <h2 class="project-heading">Growing Business</h2>
+                                <p class="project-description">Приложение</p>
+                            </div>
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -169,8 +243,8 @@
                 <address class="address-link">
                     <ul id="page_bottom" class="footer-address list">
                         <li class="address-list-item">
-                            <a class="address-link-map link" href="https://goo.gl/maps/nFPgF8o5voA4oPt57" target="_blank"
-                                rel="noopener noreferrer">
+                            <a class="address-link-map link" href="https://goo.gl/maps/nFPgF8o5voA4oPt57"
+                                target="_blank" rel="noopener noreferrer">
                                 Киев, пр-т Леси Украинки, 26</a>
                         </li>
                         <li class="address-list-item">
@@ -219,4 +293,5 @@
         </div>
     </footer>
 </body>
+
 </html>
