--- a/index.html
+++ b/index.html
@@ -121,15 +121,24 @@
                 <ul class="pictures-list list">
                     <li class="pictures-list-item">
                         <img class="pictures-list-item-img" src="./images/about/about-img-1.jpg"
-                            alt="сотрудник набирает текст" width="370" height="295">
+                            alt="сотрудник набирает текст" width="370" height="295"/>
+                            <div class="pictures-description">
+                                <p>Десктопные приложения</p>
+                            </div>
                     </li>
                     <li class="pictures-list-item">
                         <img class="pictures-list-item-img" src="./images/about/about-img-2.jpg"
-                            alt="сотрудник работает с смартфоном" width="370" height="295">
+                            alt="сотрудник работает с смартфоном" width="370" height="295"/>
+                            <div class="pictures-description">
+                                <p>Мобильные приложения</p>
+                            </div>
                     </li>
                     <li class="pictures-list-item">
                         <img class="pictures-list-item-img" src="./images/about/about-img-3.jpg"
-                            alt="сотрудник работает с планшетом" width="370" height="295">
+                            alt="сотрудник работает с планшетом" width="370" height="295"/>
+                            <div class="pictures-description">
+                                <p>Дизайнерские решения</p>
+                            </div>
                     </li>
                 </ul>
             </div>
@@ -403,6 +412,8 @@
                 </div>
             </div>
         </footer>
+        <!-- Скрипт modal.js -->
+        <script src="./js/modal.js"></script>
 </body>
 
 </html>
