--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,6 +9,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
         integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -21,7 +21,7 @@
     <header class="header header-shadow">
         <div class="contanier flex">
             <nav class="navigation flex">
-                <a class="logo-link link" href="./index.html" lang="en"><span class="logo-1 link">Web</span>Studio</a>
+                <a class="logo-link link animate__swing animate__animated" href="./index.html" lang="en"><span class="logo-1 link">Web</span>Studio</a>
                 <ul class="menu flex list">
                     <li class="menu-item">
                         <a class="menu-link link current" href="./index.html">Студия</a>
@@ -59,7 +59,7 @@
         <section class="hero">
             <div class="contanier">
                 <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-                <button class="modal-btn" type="button">Заказать услугу</button>
+                <button class="modal-btn" type="button" data-modal-open>Заказать услугу</button>
             </div>
         </section>
         <!--skills company-->
@@ -411,9 +411,17 @@
                     </ul>
                 </div>
             </div>
-        </footer>
+        </footer>     
+        <div class="backdrop is-hidden" data-modal>
+            <div class="modal">
+                <button class="modal-button" data-modal-close>
+                <svg class="modal-icon">
+                <use href="./images/sprite.svg#icon-close"></use>
+                </svg>
+                </button>
+            </div>
+        </div>
         <!-- Скрипт modal.js -->
-        <script src="./js/modal.js"></script>
+        <script src="js/modal.js"></script>
 </body>
-
 </html>
