--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.css"
         integrity="sha512-Zx6MlUMKSVJoQ+83OwhdILe8cSEsCzfqThJd7J/VA2UrK6Ctj85p+xzqfyuNXE5B1k25uUdmJ2OzItbBy9GHAQ=="
         crossorigin="anonymous" />
@@ -21,7 +22,7 @@
     <header class="header">
         <div class="contanier header-contanier flex">
             <nav class="navigation flex">
-                <a class="logo-link link" href="./index.html" lang="en"><span class="logo-1 link">Web</span>Studio</a>
+                <a class="logo-link link animate__swing animate__animated" href="./index.html" lang="en"><span class="logo-1 link">Web</span>Studio</a>
                 <ul class="menu flex list">
                     <li class="menu-item">
                         <a class="menu-link link" href="./index.html">Студия</a>
@@ -82,6 +83,9 @@
                             <div class="project-item-img-wrapper">
                                 <img class="project-thumbnail" src="./images/Portfolio/foto-1.jpg" alt="Технокряк" width="370" height="294">
                                 <p class="overlay">
+                                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+                                    цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.
                                     Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
                                     цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.
