--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css">
+    <title>WEBStudio</title>
 </head>
 
 <body>
@@ -45,7 +46,7 @@
                 </li>
                 <li class="header-contact-item">
                     <a class="header-contact-link flex link" href="tel:+380961111111">
-                        <svg width="10" height="16" class="tel">
+                        <svg width="10" height="16" class="phone">
                             <use href="./images/sprite.svg#icon-tel">
                             </use>
                         </svg>
