--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
                 </li>
                 <li class="header-contact-item">
                     <a class="header-contact-link flex link" href="tel:+380961111111">
-                        <svg width="10" height="16" class="tel">
+                        <svg width="10" height="16" class="phone">
                             <use href="./images/sprite.svg#icon-tel">
                             </use>
                         </svg>
